--- a/index.html
+++ b/index.html
@@ -3,47 +3,39 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pendidikan Agama Islam Kelas XII</title>
+  <title>Pendidikan Agama Islam XII SMK/MAK</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    /* Animasi muncul tombol */
-    #toTop {
-      transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
-    }
+    #toTop { transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out; }
   </style>
 </head>
 
 <body class="bg-gray-50 text-gray-800 font-sans dark:bg-gray-900 dark:text-gray-100 transition duration-500">
 
-  <!-- 🔹 Navigasi Sticky -->
+  <!-- 🔹 Navigasi -->
   <nav class="fixed top-0 left-0 w-full bg-white dark:bg-gray-800 shadow z-50">
-    <div class="max-w-6xl mx-auto px-6 py-4 flex justify-between items-center">
+    <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
       <h1 class="text-xl font-bold text-green-700 dark:text-green-400">PAI XII SMK</h1>
       <ul class="flex space-x-6 font-medium text-gray-700 dark:text-gray-200">
-        <li><a href="#tentang" class="hover:text-green-700 dark:hover:text-green-400">Tentang</a></li>
-        <li><a href="#materi" class="hover:text-green-700 dark:hover:text-green-400">Materi</a></li>
-        <li><a href="#guru" class="hover:text-green-700 dark:hover:text-green-400">Guru</a></li>
+        <li><a href="#tentang" class="hover:text-green-600 dark:hover:text-green-400">Tentang</a></li>
+        <li><a href="#materi" class="hover:text-green-600 dark:hover:text-green-400">Daftar Bab</a></li>
+        <li><a href="#guru" class="hover:text-green-600 dark:hover:text-green-400">Guru</a></li>
       </ul>
-
-      <!-- 🌗 Tombol Toggle Dark Mode -->
-      <button id="theme-toggle" class="ml-4 p-2 rounded-full bg-gray-100 dark:bg-gray-700 text-gray-800 dark:text-yellow-300 hover:scale-110 transition">
-        🌙
-      </button>
+      <button id="theme-toggle" class="ml-4 p-2 rounded-full bg-gray-100 dark:bg-gray-700 text-gray-800 dark:text-yellow-300 hover:scale-110 transition">🌙</button>
     </div>
   </nav>
 
-  <!-- Spacer -->
   <div class="h-20"></div>
 
   <!-- 🔹 Header -->
-  <header class="bg-gradient-to-r from-green-700 to-emerald-500 text-white py-10 px-6 dark:from-green-800 dark:to-emerald-600">
-    <div class="max-w-6xl mx-auto flex flex-col md:flex-row items-center justify-between gap-6">
+  <header class="bg-gradient-to-r from-green-700 to-emerald-500 text-white py-12 px-6 dark:from-green-800 dark:to-emerald-600">
+    <div class="max-w-7xl mx-auto flex flex-col md:flex-row items-center justify-between gap-8">
       <div>
         <h1 class="text-4xl font-bold mb-2">Pendidikan Agama Islam dan Budi Pekerti</h1>
-        <p class="text-lg mb-4">Kelas XII SMK/MAK — Membentuk insan beriman, berakhlak mulia, dan berkarakter Islami.</p>
-        <a href="#materi" class="bg-white text-green-700 font-semibold px-6 py-3 rounded-full shadow hover:bg-gray-100 transition">Mulai Belajar</a>
+        <p class="text-lg mb-4">Kelas XII SMK/MAK — Menjadi insan beriman, berilmu, dan berakhlak mulia.</p>
+        <a href="#materi" class="bg-white text-green-700 font-semibold px-6 py-3 rounded-full shadow hover:bg-gray-100 transition">📖 Mulai Belajar</a>
       </div>
-      <img src="https://i.ibb.co.com/Pv9ndftg/Whats-App-Image-2025-10-31-at-21-39-02.jpg" alt="Guru PAI" class="w-40 h-40 rounded-full border-4 border-white shadow-lg object-cover">
+      <img src="https://i.ibb.co.com/Pv9ndftg/Whats-App-Image-2025-10-31-at-21-39-02.jpg" alt="Guru PAI" class="w-44 h-44 rounded-full border-4 border-white shadow-lg object-cover">
     </div>
   </header>
 
@@ -51,49 +43,99 @@
   <section id="tentang" class="py-16 px-6 max-w-6xl mx-auto text-center">
     <h2 class="text-3xl font-bold mb-4 text-green-700 dark:text-green-400">Tentang Mata Pelajaran</h2>
     <p class="text-gray-700 dark:text-gray-300 leading-relaxed max-w-3xl mx-auto">
-      Pendidikan Agama Islam dan Budi Pekerti Kelas XII dirancang untuk menumbuhkan keimanan, ketakwaan, dan akhlak mulia peserta didik. 
-      Melalui pemahaman Al-Qur’an, hadis, serta sejarah perkembangan Islam, siswa diajak menjadi insan yang berkarakter, demokratis, dan bertanggung jawab.
+      Mata pelajaran ini membentuk peserta didik menjadi pribadi beriman, bertakwa, dan berakhlak mulia 
+      dengan memahami ajaran Islam melalui Al-Qur’an, hadis, sejarah, dan penerapan nilai-nilai moral dalam kehidupan sehari-hari.
     </p>
   </section>
 
   <!-- 🔹 Daftar Bab -->
   <section id="materi" class="bg-white dark:bg-gray-800 py-16 px-6 transition duration-500">
-    <div class="max-w-6xl mx-auto">
+    <div class="max-w-7xl mx-auto">
       <h2 class="text-3xl font-bold text-center text-green-700 dark:text-green-400 mb-10">📚 Daftar Bab Pembelajaran</h2>
 
       <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
-        <!-- Card Template -->
-        <div class="bg-green-50 dark:bg-gray-700 p-6 rounded-2xl shadow hover:shadow-lg transition">
-          <h3 class="font-semibold text-lg mb-2">Bab 1: Berpikir Kritis dan Bersikap Demokratis</h3>
-          <ul class="list-disc pl-5 text-sm">
+
+        <!-- Bab 1 -->
+        <a href="bab1.html" class="group block bg-green-50 dark:bg-gray-700 p-6 rounded-2xl shadow hover:shadow-2xl hover:-translate-y-1 transition-all">
+          <h3 class="font-semibold text-lg mb-2 group-hover:text-green-600">Bab 1: Berpikir Kritis dan Bersikap Demokratis</h3>
+          <ul class="list-disc pl-5 text-sm text-gray-700 dark:text-gray-300 space-y-1">
             <li>Q.S. Ali ‘Imran: 190–191 dan 159</li>
-            <li>Kaidah Tajwid</li>
-            <li>Asbabun Nuzul</li>
+            <li>Kaidah Tajwid, Asbabun Nuzul</li>
             <li>Kandungan Ayat</li>
-            <li>Sikap Demokratis</li>
+            <li>Sikap Kritis dan Demokratis</li>
           </ul>
-        </div>
+        </a>
 
-        <div class="bg-green-50 dark:bg-gray-700 p-6 rounded-2xl shadow hover:shadow-lg transition">
-          <h3 class="font-semibold text-lg mb-2">Bab 2: Saling Menasihati dan Berbuat Baik (Ihsan)</h3>
-          <ul class="list-disc pl-5 text-sm">
-            <li>Q.S. Luqman: 13–14 & Al-Baqarah: 83</li>
-            <li>Kaidah Tajwid</li>
-            <li>Asbabun Nuzul</li>
-            <li>Perilaku Ihsan</li>
+        <!-- Bab 2 -->
+        <a href="bab2.html" class="group block bg-green-50 dark:bg-gray-700 p-6 rounded-2xl shadow hover:-translate-y-1 transition-all">
+          <h3 class="font-semibold text-lg mb-2 group-hover:text-green-600">Bab 2: Saling Menasihati dan Berbuat Baik (Ihsan)</h3>
+          <ul class="list-disc pl-5 text-sm text-gray-700 dark:text-gray-300 space-y-1">
+            <li>Q.S. Luqman/31: 13–14 & Al-Baqarah/2: 83</li>
+            <li>Kaidah Tajwid, Asbabun Nuzul</li>
+            <li>Hikmah dan Perilaku Ihsan</li>
           </ul>
-        </div>
+        </a>
 
-        <div class="bg-green-50 dark:bg-gray-700 p-6 rounded-2xl shadow hover:shadow-lg transition">
-          <h3 class="font-semibold text-lg mb-2">Bab 3: Iman kepada Hari Akhir</h3>
-          <ul class="list-disc pl-5 text-sm">
-            <li>Pengertian Hari Akhir</li>
-            <li>Dalil dan Tanda-Tanda</li>
-            <li>Bersikap Mawas Diri</li>
+        <!-- Bab 3 -->
+        <a href="bab3.html" class="group block bg-green-50 dark:bg-gray-700 p-6 rounded-2xl shadow hover:-translate-y-1 transition-all">
+          <h3 class="font-semibold text-lg mb-2 group-hover:text-green-600">Bab 3: Iman kepada Hari Akhir</h3>
+          <ul class="list-disc pl-5 text-sm text-gray-700 dark:text-gray-300 space-y-1">
+            <li>Dalil, Tanda-tanda, dan Kejadian Hari Akhir</li>
+            <li>Perilaku Mawas Diri & Taat Ibadah</li>
           </ul>
-        </div>
+        </a>
 
-        <!-- Tambahkan bab lain seperti sebelumnya... -->
+        <!-- Bab 4 -->
+        <a href="bab4.html" class="group block bg-green-50 dark:bg-gray-700 p-6 rounded-2xl shadow hover:-translate-y-1 transition-all">
+          <h3 class="font-semibold text-lg mb-2 group-hover:text-green-600">Bab 4: Iman kepada Qada dan Qadar</h3>
+          <ul class="list-disc pl-5 text-sm text-gray-700 dark:text-gray-300 space-y-1">
+            <li>Pengertian dan Pembagian Qada & Qadar</li>
+            <li>Optimis, Ikhtiar, dan Tawakal</li>
+          </ul>
+        </a>
+
+        <!-- Bab 5 -->
+        <a href="bab5.html" class="group block bg-green-50 dark:bg-gray-700 p-6 rounded-2xl shadow hover:-translate-y-1 transition-all">
+          <h3 class="font-semibold text-lg mb-2 group-hover:text-green-600">Bab 5: Kerja Keras dan Tanggung Jawab</h3>
+          <ul class="list-disc pl-5 text-sm text-gray-700 dark:text-gray-300 space-y-1">
+            <li>Makna kerja keras dan tanggung jawab</li>
+            <li>Hikmah bekerja dengan niat ibadah</li>
+          </ul>
+        </a>
+
+        <!-- Bab 6 -->
+        <a href="bab6.html" class="group block bg-green-50 dark:bg-gray-700 p-6 rounded-2xl shadow hover:-translate-y-1 transition-all">
+          <h3 class="font-semibold text-lg mb-2 group-hover:text-green-600">Bab 6: Pernikahan dalam Islam</h3>
+          <ul class="list-disc pl-5 text-sm text-gray-700 dark:text-gray-300 space-y-1">
+            <li>Ketentuan, Hak & Hikmah Pernikahan</li>
+            <li>Hukum Indonesia tentang Pernikahan</li>
+          </ul>
+        </a>
+
+        <!-- Bab 7 -->
+        <a href="bab7.html" class="group block bg-green-50 dark:bg-gray-700 p-6 rounded-2xl shadow hover:-translate-y-1 transition-all">
+          <h3 class="font-semibold text-lg mb-2 group-hover:text-green-600">Bab 7: Ketentuan Warisan dalam Islam</h3>
+          <ul class="list-disc pl-5 text-sm text-gray-700 dark:text-gray-300 space-y-1">
+            <li>Pembagian dan Hikmah Warisan</li>
+          </ul>
+        </a>
+
+        <!-- Bab 8 -->
+        <a href="bab8.html" class="group block bg-green-50 dark:bg-gray-700 p-6 rounded-2xl shadow hover:-translate-y-1 transition-all">
+          <h3 class="font-semibold text-lg mb-2 group-hover:text-green-600">Bab 8: Sejarah Perkembangan Islam di Indonesia</h3>
+          <ul class="list-disc pl-5 text-sm text-gray-700 dark:text-gray-300 space-y-1">
+            <li>Masuknya Islam, Kerajaan Islam, dan Peran Umat</li>
+          </ul>
+        </a>
+
+        <!-- Bab 9 -->
+        <a href="bab9.html" class="group block bg-green-50 dark:bg-gray-700 p-6 rounded-2xl shadow hover:-translate-y-1 transition-all">
+          <h3 class="font-semibold text-lg mb-2 group-hover:text-green-600">Bab 9: Kemajuan dan Kemunduran Peradaban Islam di Dunia</h3>
+          <ul class="list-disc pl-5 text-sm text-gray-700 dark:text-gray-300 space-y-1">
+            <li>Faktor kemajuan dan kemunduran</li>
+            <li>Hikmah perkembangan peradaban Islam</li>
+          </ul>
+        </a>
       </div>
     </div>
   </section>
@@ -104,54 +146,61 @@
       <img src="https://i.ibb.co.com/Pv9ndftg/Whats-App-Image-2025-10-31-at-21-39-02.jpg" alt="Guru PAI" class="w-32 h-32 rounded-full border-4 border-green-600 shadow-md object-cover">
       <div>
         <h3 class="text-2xl font-bold text-green-700 dark:text-green-400">Ustadz/ah Pembimbing</h3>
-        <p class="mt-2 text-gray-700 dark:text-gray-300">
-          Pengajar Pendidikan Agama Islam dan Budi Pekerti SMK Kelas XII.<br>
-          “Mengajarkan nilai Islam bukan hanya lewat kata, tetapi dengan keteladanan.”
-        </p>
+        <p class="mt-2 text-gray-700 dark:text-gray-300">Pengajar Pendidikan Agama Islam dan Budi Pekerti SMK Kelas XII.  
+        “Mengajarkan nilai Islam bukan hanya lewat kata, tetapi melalui keteladanan.”</p>
       </div>
     </div>
   </section>
 
   <!-- 🔹 Tombol Kembali ke Atas -->
-  <button id="toTop" title="Kembali ke atas" class="hidden fixed bottom-6 right-6 bg-green-600 hover:bg-green-700 text-white p-3 rounded-full shadow-lg text-lg">
-    ⬆️
-  </button>
+  <button id="toTop" title="Kembali ke atas" class="hidden fixed bottom-6 right-6 bg-green-600 hover:bg-green-700 text-white p-3 rounded-full shadow-lg text-lg">⬆️</button>
 
   <!-- 🔹 Footer -->
   <footer class="bg-green-700 dark:bg-green-800 text-white text-center py-6">
     <p class="text-sm">&copy; 2025 Pendidikan Agama Islam XII SMK/MAK. Semua Hak Dilindungi.</p>
   </footer>
 
-  <!-- 🔹 JavaScript Interaktivitas -->
+  <!-- 🔹 Script Interaktivitas -->
   <script>
-    // 🌙 Toggle Dark Mode
+    // Dark Mode Toggle
     const themeToggle = document.getElementById('theme-toggle');
     themeToggle.addEventListener('click', () => {
       document.documentElement.classList.toggle('dark');
       themeToggle.textContent = document.documentElement.classList.contains('dark') ? '☀️' : '🌙';
       localStorage.setItem('theme', document.documentElement.classList.contains('dark') ? 'dark' : 'light');
     });
-
-    // Saat load, cek preferensi tema sebelumnya
     if (localStorage.getItem('theme') === 'dark') {
       document.documentElement.classList.add('dark');
       themeToggle.textContent = '☀️';
     }
 
-    // ⬆️ Tombol Kembali ke Atas
+    // Tombol Kembali ke Atas
     const toTopBtn = document.getElementById('toTop');
     window.addEventListener('scroll', () => {
       if (window.scrollY > 400) {
         toTopBtn.classList.remove('hidden');
         toTopBtn.style.opacity = '1';
-        toTopBtn.style.transform = 'translateY(0)';
       } else {
         toTopBtn.classList.add('hidden');
       }
     });
+    toTopBtn.addEventListener('click', () => window.scrollTo({ top: 0, behavior: 'smooth' }));
 
-    toTopBtn.addEventListener('click', () => {
-      window.scrollTo({ top: 0, behavior: 'smooth' });
+    // Transisi antar halaman
+    document.body.style.opacity = '0';
+    window.addEventListener('load', () => {
+      document.body.style.transition = 'opacity 0.6s ease-in-out';
+      document.body.style.opacity = '1';
+    });
+    document.querySelectorAll('a[href]').forEach(link => {
+      link.addEventListener('click', e => {
+        const href = link.getAttribute('href');
+        if (href && !href.startsWith('#')) {
+          e.preventDefault();
+          document.body.style.opacity = '0';
+          setTimeout(() => window.location.href = href, 400);
+        }
+      });
     });
   </script>
 
