--- a/bab2.html
+++ b/bab2.html
@@ -1,52 +1,148 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bab 2: Saling Menasihati dan Berbuat Baik (Ihsan)</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 20px;
-        }
-        h1, h2, h3 {
-            color: #2c3e50;
-        }
-        ul {
-            list-style-type: none;
-            padding-left: 0;
-        }
-        ul li {
-            margin-bottom: 5px;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Bab 2: Saling Menasihati dan Berbuat Baik (Ihsan)</title>
+<style>
+    body { font-family: Arial, sans-serif; margin: 20px; line-height: 1.6; }
+    h1, h2 { color: #2c3e50; }
+    nav ul { list-style: none; padding-left: 0; }
+    nav ul li { margin-bottom: 5px; }
+    a { text-decoration: none; color: #2980b9; }
+    a:hover { text-decoration: underline; }
+
+    /* Modal styles */
+    .modal { display: none; position: fixed; z-index: 100; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background-color: rgba(0,0,0,0.5); }
+    .modal-content { background-color: #fefefe; margin: 10% auto; padding: 20px; border-radius: 8px; width: 90%; max-width: 600px; position: relative; }
+    .close { color: #aaa; position: absolute; top: 10px; right: 20px; font-size: 28px; font-weight: bold; cursor: pointer; }
+    .close:hover { color: #000; }
+
+    /* Highlight style */
+    .highlight { background-color: yellow; transition: background-color 0.3s; }
+
+    /* Responsive video */
+    .video-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; margin-top: 20px; }
+    .video-container iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+</style>
 </head>
 <body>
-    <h1>Bab 2: Saling Menasihati dan Berbuat Baik (Ihsan)</h1>
 
-    <h2>A. Membaca Q.S. Luqman/31:13–14 dan Q.S. al-Baqarah/2:83</h2>
-    <p>Materi tentang membaca dan memahami ayat-ayat tersebut.</p>
+<h1>Bab 2: Saling Menasihati dan Berbuat Baik (Ihsan)</h1>
 
-    <h2>B. Kaidah Tajwid</h2>
-    <p>Halaman 25 – Penjelasan tentang kaidah tajwid.</p>
+<nav>
+    <h2>Daftar Isi</h2>
+    <ul>
+        <li><a href="#subA">A. Membaca Q.S. Luqman/31:13–14 dan Q.S. al-Baqarah/2:83</a></li>
+        <li><a href="#subB">B. Kaidah Tajwid</a></li>
+        <li><a href="#subC">C. Asbabun Nuzul Q.S. Luqman/31:13–14 dan Q.S. al-Baqarah/2:83</a></li>
+        <li><a href="#subD">D. Kandungan Q.S. Luqman/31:13–14 dan Q.S. al-Baqarah/2:83</a></li>
+        <li><a href="#subE">E. Perilaku yang Mencerminkan Sikap Saling Menasihati dan Berbuat Baik</a></li>
+        <li><a href="#subF">F. Hikmah Sikap Saling Menasihati dan Berbuat Baik</a></li>
+        <li><a href="#rangkuman">Rangkuman</a></li>
+        <li><a href="#evaluasi">Evaluasi Bab 2</a></li>
+    </ul>
+</nav>
 
-    <h2>C. Asbabun Nuzul Q.S. Luqman/31:13–14 dan Q.S. al-Baqarah/2:83</h2>
-    <p>Halaman 26 – Latar belakang turunnya ayat-ayat tersebut.</p>
+<h2 id="subA">A. Membaca Q.S. Luqman/31:13–14 dan Q.S. al-Baqarah/2:83</h2>
+<p>Klik ayat berikut untuk membaca dan mendengarkan:</p>
+<ul>
+    <li><a href="#" onclick="openModal('modalLuqman')">Q.S. Luqman 31:13–14</a></li>
+    <li><a href="#" onclick="openModal('modalBaqarah')">Q.S. al-Baqarah 2:83</a></li>
+</ul>
 
-    <h2>D. Kandungan Q.S. Luqman/31:13–14 dan Q.S. al-Baqarah/2:83</h2>
-    <p>Halaman 26 – Isi dan pesan penting dari ayat-ayat ini.</p>
+<!-- Video Pembelajaran -->
+<div class="video-container">
+    <iframe src="https://www.youtube.com/embed/f_Ij86jQnDQ?si=033iv6jWP6H5Owst" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            allowfullscreen>
+    </iframe>
+</div>
 
-    <h2>E. Perilaku yang Mencerminkan Sikap Saling Menasihati dan Berbuat Baik dalam Hidup Sehari-hari</h2>
-    <p>Halaman 29 – Contoh perilaku nyata dalam kehidupan sehari-hari.</p>
+<h2 id="subB">B. Kaidah Tajwid</h2>
+<p>Halaman 25 – Penjelasan tentang kaidah tajwid beserta contoh bacaan.</p>
 
-    <h2>F. Hikmah Sikap Saling Menasihati dan Berbuat Baik dalam Hidup Sehari-hari</h2>
-    <p>Halaman 30 – Manfaat dan hikmah dari berbuat baik dan menasihati.</p>
+<h2 id="subC">C. Asbabun Nuzul Q.S. Luqman/31:13–14 dan Q.S. al-Baqarah/2:83</h2>
+<p>Halaman 26 – Latar belakang turunnya ayat-ayat tersebut.</p>
 
-    <h2>Rangkuman</h2>
-    <p>Halaman 32 – Ringkasan dari seluruh materi Bab 2.</p>
+<h2 id="subD">D. Kandungan Q.S. Luqman/31:13–14 dan Q.S. al-Baqarah/2:83</h2>
+<p>Halaman 26 – Isi dan pesan penting dari ayat-ayat ini.</p>
 
-    <h2>Evaluasi Bab 2</h2>
-    <p>Halaman 34 – Soal evaluasi untuk mengukur pemahaman materi.</p>
+<h2 id="subE">E. Perilaku yang Mencerminkan Sikap Saling Menasihati dan Berbuat Baik</h2>
+<p>Halaman 29 – Contoh perilaku nyata dalam kehidupan sehari-hari.</p>
+
+<h2 id="subF">F. Hikmah Sikap Saling Menasihati dan Berbuat Baik</h2>
+<p>Halaman 30 – Manfaat dan hikmah dari berbuat baik dan menasihati.</p>
+
+<h2 id="rangkuman">Rangkuman</h2>
+<p>Halaman 32 – Ringkasan dari seluruh materi Bab 2.</p>
+
+<h2 id="evaluasi">Evaluasi Bab 2</h2>
+<p>Halaman 34 – Soal evaluasi untuk mengukur pemahaman materi.</p>
+
+<!-- Modals -->
+<div id="modalLuqman" class="modal">
+    <div class="modal-content">
+        <span class="close" onclick="closeModal('modalLuqman')">&times;</span>
+        <h3>Q.S. Luqman 31:13–14</h3>
+        <p id="luqmanText">
+            <span>Dan</span> <span>Kami</span> <span>perintahkan</span> <span>kepada</span> <span>manusia</span> <span>berbuat</span> <span>baik</span> <span>kepada</span> <span>kedua</span> <span>orang</span> <span>tuanya</span>...
+        </p>
+        <audio id="audioLuqman" controls>
+            <source src="luqman31_13_14.mp3" type="audio/mpeg">
+            Browser Anda tidak mendukung audio.
+        </audio>
+        <button onclick="playAudio('luqmanText','audioLuqman')">Putar dan Sorot</button>
+    </div>
+</div>
+
+<div id="modalBaqarah" class="modal">
+    <div class="modal-content">
+        <span class="close" onclick="closeModal('modalBaqarah')">&times;</span>
+        <h3>Q.S. al-Baqarah 2:83</h3>
+        <p id="baqarahText">
+            <span>Dan</span> <span>ingatlah</span> <span>akan</span> <span>nikmat</span> <span>Allah</span> <span>atas</span> <span>kalian</span>...
+        </p>
+        <audio id="audioBaqarah" controls>
+            <source src="baqarah2_83.mp3" type="audio/mpeg">
+            Browser Anda tidak mendukung audio.
+        </audio>
+        <button onclick="playAudio('baqarahText','audioBaqarah')">Putar dan Sorot</button>
+    </div>
+</div>
+
+<script>
+// Modal
+function openModal(id) { document.getElementById(id).style.display = 'block'; }
+function closeModal(id) { document.getElementById(id).style.display = 'none'; }
+window.onclick = function(event) {
+    const modals = document.querySelectorAll('.modal');
+    modals.forEach(modal => { if(event.target == modal) modal.style.display = "none"; });
+}
+
+// Highlight kata saat audio dimainkan
+function playAudio(textId,audioId){
+    const textEl=document.getElementById(textId);
+    const words=textEl.querySelectorAll('span');
+    const audio=document.getElementById(audioId);
+
+    words.forEach(w=>w.classList.remove('highlight'));
+    audio.play();
+    let currentWord=0;
+
+    const highlightInterval=setInterval(()=>{
+        if(currentWord>0) words[currentWord-1].classList.remove('highlight');
+        if(currentWord<words.length){
+            words[currentWord].classList.add('highlight');
+            currentWord++;
+        } else {
+            clearInterval(highlightInterval);
+        }
+    }, audio.duration/words.length*1000);
+}
+</script>
+
 </body>
 </html>
