--- a/bab2.html
+++ b/bab2.html
@@ -51,9 +51,19 @@
     <li><a href="#" onclick="openModal('modalBaqarah')">Q.S. al-Baqarah 2:83</a></li>
 </ul>
 
-<!-- Video Pembelajaran -->
+<!-- Video YouTube Pertama -->
 <div class="video-container">
     <iframe src="https://www.youtube.com/embed/f_Ij86jQnDQ?si=033iv6jWP6H5Owst" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            allowfullscreen>
+    </iframe>
+</div>
+
+<!-- Video YouTube Kedua -->
+<div class="video-container">
+    <iframe src="https://www.youtube.com/embed/Qd54m6i7MnA?si=rykrhZzud5MF4Gax" 
             title="YouTube video player" 
             frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
